# PuzzleSolver

./: .gitignore  README.md
PuzzleSolver/: PuzzleDisjointSet.cpp  PuzzleDisjointSet.h  edge.cpp  edge.h  main.cpp  piece.cpp  piece.h  piece_group.cpp  piece_group.h  puzzle.cpp  puzzle.h  utils.cpp  utils.h
PuzzleSolver.xcodeproj/: project.pbxproj
PuzzleSolver.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PuzzleSolver.xcodeproj/project.xcworkspace/xcuserdata/jzeimen.xcuserdatad/: UserInterfaceState.xcuserstate
PuzzleSolver.xcodeproj/xcuserdata/jzeimen.xcuserdatad/xcdebugger/: Breakpoints.xcbkptlist
PuzzleSolver.xcodeproj/xcuserdata/jzeimen.xcuserdatad/xcschemes/: PuzzleSolver-release.xcscheme  PuzzleSolver.xcscheme  xcschememanagement.plist
Scans/Angry Birds/color/: 1.tiff  3.tiff
Scans/Toy Story/: 1.tiff  2.tiff  3.tiff  4.tiff
Scans/Toy Story back/: 1.tiff  2.tiff  4.tiff
Src/: ChangeLog  Makefile.am  PuzzleDisjointSet.cpp  PuzzleDisjointSet.h  PuzzleSolver.1  adjust_corners.cpp  adjust_corners.h  build.sh  clean.sh  compat_opencv.h  configure.ac  contours.cpp  contours.h  edge.cpp  edge.h  guided_match.cpp  guided_match.h  image_viewer.cpp  image_viewer.h  logger.cpp  logger.h  main.cpp  params.cpp  params.h  piece.cpp  piece.h  puzzle.cpp  puzzle.h  utils.cpp  utils.h
